--- a/kuliner.html
+++ b/kuliner.html
@@ -144,7 +144,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-5">
                 <div class="image-wrapper">
-                    <img src="assets/images/sarang-semut-448x336.jpg" alt="Mobirise Website Builder">
+                    <img src="assets/images/sarang-semut.jpg" alt="Mobirise Website Builder">
                     
                 </div>
             </div>
@@ -170,14 +170,14 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-5">
                 <div class="image-wrapper">
-                    <img src="assets/images/kulabutan-768x512.jpg" alt="Mobirise Website Builder">
+                    <img src="assets/images/kalabutan.jpg" alt="Mobirise Website Builder">
                     
                 </div>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5">
-                        <strong>Kulabutan</strong></h3>
+                        <strong>Kalabutan</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">
                         Kulabutan barangkali salah satu daerah di Indonesia yang terkenal dengan seafood keringnya. Selain ikan asin dan kima-kima, di sini Anda juga bisa mencicipi kulabutan. Makanan ini dibuat dari cumi besar/sotong yang dijemur sampai kering, lalu diolah. Anda juga bisa membelinya sebagai buah tangan untuk keluarga di rumah.</p>
                 </div>
